# kasit

./: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg-configuration.json  vcpkg.json
libkasit/: CMakeLists.txt
libkasit/include/kasit/: game.h  igdb_client.h  kasit.h  log.h  lru_cache.h  metadata_provider.h  settings.h  steam_client.h  thegamesdb_client.h
libkasit/src/: game.cpp  igdb_client.cpp  kasit.cpp  settings.cpp  steam_client.cpp  thegamesdb_client.cpp
